--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,26 @@
-.App {
-  text-align: center;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,400italic);
+
+font-family: 'Open Sans', sans-serif;
+
+html {
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  min-height: 3000px;
+  padding-top: 70px;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.thumbnail {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 20px;
 }
 
-.App-intro {
-  font-size: large;
+.thumbnail img {
+    width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 
 
 /*Navbar*/
